--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.980.0",
+    "@google/generative-ai": "^0.24.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
@@ -23,6 +24,7 @@
     "mongoose": "^8.22.0",
     "multer": "^2.0.2",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "pdf-parse": "^2.4.5"
   }
 }
